--- a/content/template/CreateNewPassword.html
+++ b/content/template/CreateNewPassword.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="./../../content/static/css/sigin-in.css">
+  <link rel="stylesheet" href="./../static/css/sigin-in.css">
 </head>
 <body>
   <div class="form-wrapper">
@@ -15,7 +15,7 @@
       </div>
       <div class="button-panel">
         <a href="./home-after-login.html">
-          <input type="submit" class="button" title="Create new password" value="新しいパスワード作製"></input>
+          <input type="submit" class="button" title="Create new password" value="パスワード更新"></input>
         </a>
       </div>
     </form>
