--- a/content/template/RegistUser.html
+++ b/content/template/RegistUser.html
@@ -2,6 +2,21 @@
   <link rel="stylesheet" href="./../../content/static/css/sigin-in.css">
 </head>
 <body>
+  <form>
+    {% csrf_token%}
+    {% for field in forms%}
+    <div class="form-item">
+      <label for="username"></label>
+      <input name="username" required="required" placeholder="ユーザー名"></input>
+    </div>
+    {% endfor %}
+    <div class="button-panel">
+      <a href="./home-after-login.html">
+        <input type="submit" class="button" title="Sign In" value="get start"></input>
+      </a>
+    </div>
+  </form>
+
   <div class="form-wrapper">
     <h1>会員登録</h1>
     <form>
