--- a/content/template/RegistSite.html
+++ b/content/template/RegistSite.html
@@ -88,7 +88,7 @@
   </header>
   <!--end base.html-->
   <!--学習ログタイトル，ボタン-->
-  <div class="register-name"><span>ユーザーの登録サイト</span></div>
+  <div class="register-name"><span>登録サイト</span></div>
   <div class="button-addstudylog-location">
     <a href="#" class="button-addstudylog">サイト登録＋</a>
   </div>
