--- a/content/template/regist-site-form.html
+++ b/content/template/regist-site-form.html
@@ -3,7 +3,7 @@
 </div>
 
 <body>
-  <di class="location">
+  <div class="location">
     <form>
       <div class="inputs">
         <label class="label">url</label>
