--- a/content/static/css/regist-site-form.css
+++ b/content/static/css/regist-site-form.css
@@ -1,5 +1,10 @@
 .location{
-  vertical-align: middle;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
 }
 
 form{
