--- a/content/static/css/registe-site.css
+++ b/content/static/css/registe-site.css
@@ -18,3 +18,15 @@
   color: #4A6458;
   border-bottom: solid 1px #ff96a3;
 }
+
+table{
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+}
+
+table th,table td{
+  text-align: center;
+  width: 25%;
+  padding: 15px 0;
+}
