--- a/content/template/RegistSite.html
+++ b/content/template/RegistSite.html
@@ -90,7 +90,7 @@
   <!--学習ログタイトル，ボタン-->
   <div class="register-name"><span>登録サイト</span></div>
   <div class="button-addstudylog-location">
-    <a href="#" class="button-addstudylog">サイト登録＋</a>
+    <a href="./regist-site-form.html" class="button-addstudylog">サイト登録＋</a>
   </div>
   <!--学習ログタイトル，ボタン　おわり-->
   <!--ユーザーの要録サイト-->
