--- a/content/static/css/regist-site-form.css
+++ b/content/static/css/regist-site-form.css
@@ -19,16 +19,16 @@ form{
 	float: left;
 	margin-right: 20px;
 	width:135px;
-	border-left: solid 3px #FF6701;
+	border-left: solid 3px #ff96a3;
 	padding-left: 10px;
 }
 .input_form{
 	float: left;
 	width:300px;
 }
+input[type="url"],
 input[type="text"],
 input[type="number"],
-input[type="email"],
 textarea{
 	border: solid 1px #e0e0e0;
 	border-radius:5px;
@@ -42,17 +42,7 @@ textarea{
 	text-align: center;
 }
 input[type="submit"]{
-	background: #FF6701;
-	border: none;
-	color: #fff;
-	font-size:15px;
-	font-weight:bold;
-	padding: 10px 20px;
-	margin: 0 10px;
-	border-radius: 10px;
-}
-input[type="reset"]{
-	background: #aaa;
+	background: #ff96a3;
 	border: none;
 	color: #fff;
 	font-size:15px;
