--- a/content/template/AddStudyLog.html
+++ b/content/template/AddStudyLog.html
@@ -6,12 +6,12 @@
   <div class="location">
     <form>
       <div class="inputs">
-        <label class="label">url</label>
-        <input class="input_form" type="url" name="url">
+        <label class="label">使用教材</label>
+        <input class="input_form" type="text" name="text">
       </div>
       <div class="inputs">
-        <label class="label">サイト名</label>
-        <input class="input_form" type="text" name="name">
+        <label class="label">学習時間(分)</label>
+        <input class="input_form" type="number" name="time">
       </div>
       <div class="inputs">
         <label class="label">分類</label>
