--- a/content/template/home-after-login.html
+++ b/content/template/home-after-login.html
@@ -22,25 +22,6 @@
     left: 284px;
   }
 
-  .bargraph-two-location{
-    position: absolute;
-    top: 365px;
-    left: 284px;
-  }
-
-  .calender-location{
-    position: absolute;
-    top: 83.56px;
-    right: 0px;
-    padding-right: 16px;
-  }
-
-  .ranking-table-location{
-    position:absolute;
-    top:365px;
-    right: 0px;
-    padding-right: 16px;
-  }
 
 /*配置終わり*/
 
@@ -77,34 +58,6 @@
     font-weight: 600;
   }
 
-/*棒グラフ1 初め*/
-.bargraph-one-style{
-  width: 700px;
-  height: 240px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-}
-
-/*棒グラフ2　初め*/
-.bargraph-two-External-shape{
-  width: 700px;
-  height: 240px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-}
-
-/*カレンダー　初め*/
-.calender-External-shape{
-  height: 240px;
-  width: 240px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-}
-
-/*ランキング表初め*/
-.ranking-table-External-shape{
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  width: 240px;
-  background-color: #FFF;
-}
-
 </style>
 </head>
 <body>
@@ -117,7 +70,7 @@
       <nav class="main-nav" role="navigation">
         <ul class="unstyled list-hover-slide">
           <li><a href="./home-after-login.html">マイページ</a></li>
-          <li><a href="#">ログアウト</a></li>
+          <li><a href="./home-before-login.html">ログアウト</a></li>
           <li><a href="./RegistSite.html">登録サイト</a></li>
           <li><a href="#">設定</a></li>
         </ul>
@@ -133,7 +86,7 @@
   <div class="studylogs-location">
     <div class="studylog-name"><span>学習ログ</span></div>
     <div class="button-addstudylog-location">
-      <a href="#" class="button-addstudylog">学習ログ追加＋</a>
+      <a href="./AddStudyLog.html" class="button-addstudylog">学習ログ追加＋</a>
     </div>
   </div>
   <!--学習ログタイトル，ボタン　おわり-->
@@ -173,59 +126,6 @@
     </div>
   </div>
   <!--棒グラフ1　おわり-->
-
-  <!--棒グラフ2 初め-->
-  <div class="bargraph-two-location">
-    <div class="bargraph-two-External-shape"></div>
-  </div>
-
-  <!--棒グラフ2　終わり-->
-
-  <!--カレンダー　初め-->
-  <div class="calender-location">
-    <div class="calender-External-shape">
-      <div class="wrapper">
-        <!-- xxxx年xx月を表示 -->
-        <h1 id="header"></h1>
-        <!-- ボタンクリックで月移動 -->
-        <div id="next-prev-button">
-          <button id="prev" onclick="prev()">‹</button>
-          <button id="next" onclick="next()">›</button>
-        </div>
-        <!-- カレンダー -->
-        <div id="calendar"></div>
-      </div>
-    </div>
-  </div>
-  <!--カレンダー　終わり-->
-
-  <!--ランキング表開始-->
-  <div class="ranking-table-location">
-    <div class="ranking-table-External-shape">
-      <table>
-        <tr>
-          <th>ランキング</th>
-          <th>ユーザー名</th>
-          <th>学習時間</th>
-        </tr>
-        <tr>
-          <td class="icon bird">1</td>
-          <td>samurai1</td>
-          <td>8h</td>
-        </tr>
-        <tr>
-          <td class="icon whale">2</td>
-          <td>samurai2</td>
-          <td>7h</td>
-        </tr>
-        <tr>
-          <td class="icon crab">3</td>
-          <td>samurai2</td>
-          <td>6h</td>
-        </tr>
-      </table>
-    </div>
-  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
