--- a/content/template/home-after-login.html
+++ b/content/template/home-after-login.html
@@ -18,7 +18,7 @@
 
   .bargraph-one-location{
     position: absolute;
-    top: 89px;
+    top: 113px;
     left: 284px;
   }
 
@@ -72,7 +72,6 @@
           <li><a href="./home-after-login.html">マイページ</a></li>
           <li><a href="./home-before-login.html">ログアウト</a></li>
           <li><a href="./RegistSite.html">登録サイト</a></li>
-          <li><a href="#">設定</a></li>
         </ul>
       </nav>
       <ul class="social-links list-inline unstyled list-hover-slide">
@@ -117,8 +116,7 @@
           <div class="chart-wrapper" id="chart-bar">
             <h1 class="bargraph-detail">Status</h1>
             <ul class="vbroadcast-legend">
-              <li class="successful">Successful</li>
-              <li class="unsuccessful">Unsuccessful</li>
+              <li class="total">学習時間</li>
             </ul>
           </div>
         </div>
