--- a/content/template/content/SignIn.html
+++ b/content/template/content/SignIn.html
@@ -1,18 +1,18 @@
 {% load staticfiles %}
 
 <head>
-  <link rel="stylesheet" href="./../static/css/sigin-in.css">
+  <link rel="stylesheet" href="./../../static/css/sigin-in.css">
 </head>
 <body>
   <div class="form-wrapper">
     <h1>Sign In</h1>
     <form method="POST">
       {% csrf_token%}
-      {% for field in forms %}
+      {% for field in form %}
       <div class="form-item">
         {% field %}
       </div>
-      {% endform%}
+      {% endfor %}
       <div class="form-item">
         <label for="username"></label>
         <input name="username" required="required" placeholder="ユーザー名"></input>
