--- a/content/templates/content/SignIn.html
+++ b/content/templates/content/SignIn.html
@@ -10,19 +10,11 @@
       {% csrf_token%}
       {% for field in form %}
       <div class="form-item">
-        {% field %}
+        {{ field }}
       </div>
       {% endfor %}
-      <div class="form-item">
-        <label for="username"></label>
-        <input name="username" required="required" placeholder="ユーザー名"></input>
-      </div>
-      <div class="form-item">
-        <label for="password"></label>
-        <input type="password" name="password" required="required" placeholder="パスワード"></input>
-      </div>
       <div class="button-panel">
-        <a href="./home-after-login.html">
+        <a href="{% url studyapp:home %}">
           <input type="submit" class="button" title="Sign In" value="Sign In"></input>
         </a>
       </div>
