--- a/content/templates/content/home-after-login.html
+++ b/content/templates/content/home-after-login.html
@@ -1,9 +1,8 @@
 <head>
   <link rel="stylesheet" type="text/css"
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-  <link rel="stylesheet" href="./../../content/static/css/base.css">
-  <link rel="stylesheet" href="./../../content/static/css/bargraph.css">
-  <link rel="stylesheet" href="./../../content/static/css/rank.css">
+  <link rel="stylesheet" href="./../../static/css/base.css">
+  <link rel="stylesheet" href="./../../static/css/bargraph.css">
 <style>
   .studylog-name{
     position:absolute;
@@ -127,5 +126,5 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-  <script src="./../../content/static/js/bargraphone.js"></script>
+  <script src="./../../static/js/bargraphone.js"></script>
 </body>
