--- a/content/templates/content/RegistUser.html
+++ b/content/templates/content/RegistUser.html
@@ -1,25 +1,13 @@
 <head>
-  <link rel="stylesheet" href="./../../content/static/css/sigin-in.css">
+  <link rel="stylesheet" href="./../../static/css/sigin-in.css">
 </head>
 <body>
-  <form>
-    {% csrf_token%}
-    {% for field in forms%}
-    <div class="form-item">
-      <label for="username"></label>
-      <input name="username" required="required" placeholder="ユーザー名"></input>
-    </div>
-    {% endfor %}
-    <div class="button-panel">
-      <a href="./home-after-login.html">
-        <input type="submit" class="button" title="Sign In" value="get start"></input>
-      </a>
-    </div>
-  </form>
 
   <div class="form-wrapper">
     <h1>会員登録</h1>
-    <form>
+    <form tyoe="POST">
+      {% csrf_token%}
+      {% field in %}
       <div class="form-item">
         <label for="username"></label>
         <input name="username" required="required" placeholder="ユーザー名"></input>
