--- a/content/templates/content/RegistUser.html
+++ b/content/templates/content/RegistUser.html
@@ -5,9 +5,8 @@
 
   <div class="form-wrapper">
     <h1>会員登録</h1>
-    <form tyoe="POST">
+    <form action="" method="POST">
       {% csrf_token%}
-      {% field in %}
       <div class="form-item">
         <label for="username"></label>
         <input name="username" required="required" placeholder="ユーザー名"></input>
@@ -21,7 +20,7 @@
         <input type="password" name="password" required="required" placeholder="パスワード"></input>
       </div>
       <div class="button-panel">
-        <a href="./home-after-login.html">
+        <a href="{% url 'studyapp:home' %}">
           <input type="submit" class="button" title="Sign In" value="get start"></input>
         </a>
       </div>
