change html url

--- a/content/templates/content/SignIn.html
+++ b/content/templates/content/SignIn.html
@@ -21,7 +21,7 @@
     </form>
     <div class="form-footer">
       <p><a href="{% url 'studyapp:createaccount' %}">アカウント作成</a></p>
-      <p><a href="./ForgetPassword.html">パスワードを忘れましたか？</a></p>
+      <p><a href="{% url 'studyapp:password'%}">パスワードを忘れましたか？</a></p>
     </div>
   </div>
 </body>
