--- a/content/templates/content/CreateNewPassword.html
+++ b/content/templates/content/CreateNewPassword.html
@@ -1,17 +1,18 @@
 <head>
-  <link rel="stylesheet" href="./../../content/static/css/sigin-in.css">
+  <link rel="stylesheet" href="./../../static/css/sigin-in.css">
 </head>
+
 <body>
   <div class="form-wrapper">
     <h1>ユーザー確認</h1>
     <form>
       <div class="form-item">
-        <label for="username"></label>
-        <input name="username" required="required" placeholder="ユーザー名"></input>
+        <label for="Create"></label>
+        <input name="Create" required="required" placeholder="パスワードを入力してください"></input>
       </div>
       <div class="form-item">
-        <label for="email"></label>
-        <input type="email" name="password" required="required" placeholder="Email"></input>
+        <label for="Check"></label>
+        <input name="Check" required="required" placeholder="確認用に再度パスワードを入力してください"></input>
       </div>
       <div class="button-panel">
         <a href="./home-after-login.html">
