--- a/content/templates/content/ForgetPassword.html
+++ b/content/templates/content/ForgetPassword.html
@@ -2,26 +2,20 @@
   <link rel="stylesheet" href="./../../static/css/sigin-in.css">
 </head>
 <body>
-
   <div class="form-wrapper">
-    <h1>会員登録</h1>
-    <form action="" method="POST">
-      {% csrf_token%}
+    <h1>ユーザー確認</h1>
+    <form>
       <div class="form-item">
         <label for="username"></label>
         <input name="username" required="required" placeholder="ユーザー名"></input>
       </div>
       <div class="form-item">
         <label for="email"></label>
-        <input type="email" name="email" required="required" placeholder="Email"></input>
-      </div>
-      <div class="form-item">
-        <label for="password"></label>
-        <input type="password" name="password" required="required" placeholder="パスワード"></input>
+        <input type="email" name="password" required="required" placeholder="Email"></input>
       </div>
       <div class="button-panel">
-        <a href="#">
-          <input type="submit" class="button" title="regist" value="get start"></input>
+        <a href="./home-after-login.html">
+          <input type="submit" class="button" title="Create new password" value="新しいパスワードを作る"></input>
         </a>
       </div>
     </form>
