--- a/content/templates/content/SignIn.html
+++ b/content/templates/content/SignIn.html
@@ -20,7 +20,7 @@
       </div>
     </form>
     <div class="form-footer">
-      <p><a href="{% url 'studyapp:createaccount' %}">アカウント作成</a></p>
+      <p><a href="{% url 'studyapp:create_user' %}">アカウント作成</a></p>
       <p><a href="{% url 'studyapp:password'%}">パスワードを忘れましたか？</a></p>
     </div>
   </div>
