--- a/content/templates/content/home-before-login.html
+++ b/content/templates/content/home-before-login.html
@@ -1,9 +1,9 @@
 <head>
   <link rel="stylesheet" type="text/css"
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-  <link rel="stylesheet" href="./../../content/static/css/base.css">
-  <link rel="stylesheet" href="./../../content/static/css/registe-site.css">
-  <link rel="stylesheet" href="./../../content/static/css/rank.css">
+  <link rel="stylesheet" href="./../../static/css/base.css">
+  <link rel="stylesheet" href="./../../static/css/registe-site.css">
+  <link rel="stylesheet" href="./../../static/css/rank.css">
 </head>
 
 <style>
@@ -12,11 +12,12 @@
     left: 284px;
   }
 
-  .registe-site-location{
+  .registe-site-location {
     position: absolute;
     top: 89px;
     left: 284px;
-  }
+    width: calc(100% - 284px);
+}
 
 /*配置終わり*/
 
@@ -41,6 +42,7 @@
 .registe-site-style{
   width: 700px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  margin: auto;
 }
 
 </style>
