add studytime models

--- a/content/templates/content/CreateNewPassword.html
+++ b/content/templates/content/CreateNewPassword.html
@@ -1,22 +1,21 @@
 <head>
-  <link rel="stylesheet" href="./../../static/css/sigin-in.css">
+  <link rel="stylesheet" href="./../static/css/sigin-in.css">
 </head>
-
 <body>
   <div class="form-wrapper">
-    <h1>ユーザー確認</h1>
+    <h1>パスワード作製</h1>
     <form>
       <div class="form-item">
-        <label for="Create"></label>
-        <input name="Create" required="required" placeholder="パスワードを入力してください"></input>
+        <label for="password"></label>
+        <input name="password" required="required" placeholder="新しいパスワード"></input>
       </div>
       <div class="form-item">
-        <label for="Check"></label>
-        <input name="Check" required="required" placeholder="確認用に再度パスワードを入力してください"></input>
+        <label for="password"></label>
+        <input type="password" name="password" required="required" placeholder="確認"><input>
       </div>
       <div class="button-panel">
         <a href="./home-after-login.html">
-          <input type="submit" class="button" title="Create new password" value="新しいパスワードを作る"></input>
+          <input type="submit" class="button" title="Create new password" value="パスワード更新"></input>
         </a>
       </div>
     </form>
