--- a/content/templates/content/RegistSite.html
+++ b/content/templates/content/RegistSite.html
@@ -1,6 +1,6 @@
 <head>
-  <link rel="stylesheet" href="./../../content/static/css/base.css">
-  <link rel="stylesheet" href="./../../content/static/css/registe-site.css">
+  <link rel="stylesheet" href="./../../static/css/base.css">
+  <link rel="stylesheet" href="./../../static/css/registe-site.css">
 </head>
 
 <style>
@@ -20,6 +20,7 @@
     position: absolute;
     top: 89px;
     left: 284px;
+    width: calc(100% - 284px);
   }
 
   /*配置終わり*/
@@ -60,6 +61,7 @@
   .registe-site-style{
   width: 700px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  margin:auto;
 }
 
 
@@ -75,7 +77,7 @@
       <nav class="main-nav" role="navigation">
         <ul class="unstyled list-hover-slide">
           <li><a href="./home-after-login.html">ホーム</a></li>
-          <li><a href="./sign-in.html">ログイン・会員登録</a></li>
+          <li><a href="./sign-in.html">ログアウト</a></li>
           <li><a href="./RegistSite.html">登録サイト</a></li>
         </ul>
       </nav>
