--- a/content/static/css/bargraph.css
+++ b/content/static/css/bargraph.css
@@ -20,7 +20,10 @@
 }
 
 .wrapper {
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  border:0.1px solid;
+  border-color: #eee;
+  border-radius: 8px;
   display: none;
   width: 870px;
 }
