--- a/content/templates/content/AddStudyLog.html
+++ b/content/templates/content/AddStudyLog.html
@@ -12,7 +12,7 @@
       </div>
       <div class="inputs">
         <label class="label">学習時間(分)</label>
-        <input class="input_form" type="number" name="time">
+        <input class="input_form" required="required" type="number" name="time">
       </div>
       <div class="inputs">
         <label class="label">分類</label>
