--- a/content/templates/content/home-after-login.html
+++ b/content/templates/content/home-after-login.html
@@ -95,15 +95,15 @@
             <div class="listen-wrap">
               <ul>
                 <li>
-                    <span class="count">{{time}}</span>
-                    <span>total</span>
+                  <span class="count">{{time}}</span>
+                  <span>total</span>
                 </li>
                 <li>
-                  <span class="count">50</span>
+                  <span class="count">{{week_time}}</span>
                   <span>week</span>
                 </li>
                 <li>
-                  <span class="count">{{today_total}}</span>
+                  <span class="count">{{today_time}}</span>
                   <span>today</span>
                 </li>
               </ul>
