--- a/content/templates/content/home-before-login.html
+++ b/content/templates/content/home-before-login.html
@@ -56,8 +56,8 @@
     <div class="nav-wrap">
       <nav class="main-nav" role="navigation">
         <ul class="unstyled list-hover-slide">
-          <li><a href="./home.html">ホーム</a></li>
-          <li><a href="./sign-in.html">ログイン・会員登録</a></li>
+          <li><a href="{% url 'studyapp:home' %}">ホーム</a></li>
+          <li><a href="{% url 'studyapp:login' %}">ログイン・会員登録</a></li>
         </ul>
       </nav>
       <ul class="social-links list-inline unstyled list-hover-slide">
