--- a/content/templates/content/RegistSite.html
+++ b/content/templates/content/RegistSite.html
@@ -105,27 +105,9 @@
           <th>いいね数</th>
         </tr>
         <tr>
-          <td>data 1-1</td>
-          <td>data 2-1</td>
-          <td>data 3-1</td>
-          <td>5</td>
-        </tr>
-        <tr>
-          <td>data 1-2</td>
-          <td>data 2-2</td>
-          <td>data 3-2</td>
-          <td>5</td>
-        </tr>
-        <tr>
-          <td>data 1-3</td>
-          <td>data 2-3</td>
-          <td>data 3-3</td>
-          <td>5</td>
-        </tr>
-        <tr>
-          <td>data 1-4</td>
-          <td>data 2-4</td>
-          <td>data 3-4</td>
+          <td>{{url}}</td>
+          <td>{{title}}</td>
+          <td>{{category}}</td>
           <td>5</td>
         </tr>
       </table>
