--- a/content/templates/content/SignIn.html
+++ b/content/templates/content/SignIn.html
@@ -14,6 +14,11 @@
         {{ field }}
       </div>
       {% endfor %}
+      {% for error in form.non_field_errors %}
+      <div class="alert alert-danger" roel="alert">
+        <p>{{error}}</p>
+      </div>
+      {% endfor %}
       <div class="button-panel">
         <a href="{% url 'studyapp:home' %}">
           <input type="submit" class="button" title="Sign In" value="Sign In"></input>
