--- a/content/templates/content/CreateNewPassword.html
+++ b/content/templates/content/CreateNewPassword.html
@@ -4,7 +4,8 @@
 <body>
   <div class="form-wrapper">
     <h1>パスワード作製</h1>
-    <form>
+    <form action="" method="POST">
+      {% csrf_token %}
       <div class="form-item">
         <label for="password"></label>
         <input name="password" required="required" placeholder="新しいパスワード"></input>
@@ -14,9 +15,7 @@
         <input type="password" name="password" required="required" placeholder="確認"><input>
       </div>
       <div class="button-panel">
-        <a href="./home-after-login.html">
-          <input type="submit" class="button" title="Create new password" value="パスワード更新"></input>
-        </a>
+        <input type="submit" class="button" title="Create new password" value="パスワード更新"></input>
       </div>
     </form>
     <div class="form-footer">
