--- a/content/templates/content/timer.html
+++ b/content/templates/content/timer.html
@@ -1,4 +1,7 @@
 <head>
+  <link href="./../../static/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link rel="stylesheet" href="./../../static/css/bootstrap.css">
   <link rel="stylesheet" href="./../../static/css/base.css">
   <link rel="stylesheet" href="./../../static/css/timer.css">
 </head>
@@ -31,11 +34,147 @@
         00:00:00
       </div>
       <ul id="buttons">
-        <li><button onclick="startTimer()">Start</button></li>
-        <li><button onclick="stopTimer()">Stop</button></li>
-        <li><button onclick="resetTimer()">Reset</button></li>
+        <li><button class="timerbutton" onclick="startTimer()">Start</button></li>
+        <li><button class="timerbutton" onclick="stopTimer()">Stop</button></li>
+        <li><button class="timerbutton" onclick="resetTimer()">Reset</button></li>
+        <li>
+          <button class="timerbutton" onclick="registTimer()" type="button" class="regist_time" data-target="#myModal" data-toggle="modal">Regist</button>
+        </li>
       </ul>
     </div>
   </div>
-  <script src="./../../static/js/timer.js"></script>
+  <!--Modal-->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="myModalLabel">カスタムJavaScriptでfocus設定</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="閉じる"><span
+              aria-hidden="true">&times;</span></button>
+        </div>
+        <div class="modal-body">
+          <form action="" method="POST" class="px-4 py-3">
+            <div class="form-group">
+              <label for="exampleFormEmail">勉強時間(分)</label>
+              <input type="number" class="form-control" id="exampleFormEmail">
+            </div>
+            <div class="form-group">
+              <label for="exampleFormPassword">パスワード</label>
+              <input type="password" class="form-control" id="exampleFormPassword" placeholder="パスワード">
+            </div>
+            <div class="form-group">
+              <label for="exampleFormPassword">パスワード</label>
+              <input type="password" class="form-control" id="exampleFormPassword" placeholder="パスワード">
+            </div>
+            <div class="form-check">
+            </div>
+            <button type="submit" class="btn btn-primary">サインイン</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    const timer = document.getElementById('stopwatch');
+      var hr = 0;
+      var min = 0;
+      var sec = 0;
+      var stoptime = true;
+
+      function startTimer() {
+        if (stoptime == true) {
+          stoptime = false;
+          timerCycle();
+
+        }
+      }
+      function stopTimer() {
+        if (stoptime == false) {
+          stoptime = true;
+          //終了時間の取得
+          let d2 = new Date();
+          t_end = d2.getTime();
+          //input要素の追加
+          const newEle = document.createElement('input');
+          newEle.classList.add('totaltime');
+          const reference = document.querySelector('.regist_time');
+          const parent = reference.parentNode;
+          parent.insertBefore(newEle,reference);
+          //valueへの値の挿入
+          for(let i=0;;i++){
+            const input  = document.getElementsByClassName('totaltime')[i];
+            if(input ==null){
+              break;
+            }
+            const value = input.getAttribute('value');
+            if(value === null){
+              const each_time = (t_end - t_start)/(1000);//分
+              newEle.setAttribute("value",Math.round(each_time));
+            }
+          }
+        }
+      }
+
+      function timerCycle() {
+        if (stoptime == false) {
+          sec = parseInt(sec);
+          min = parseInt(min);
+          hr = parseInt(hr);
+
+          sec = sec + 1;
+
+          if (sec == 60) {
+            min = min + 1;
+            sec = 0;
+          }
+          if (min == 60) {
+            hr = hr + 1;
+            min = 0;
+            sec = 0;
+          }
+
+          if (sec < 10 || sec == 0) {
+            sec = '0' + sec;
+          }
+          if (min < 10 || min == 0) {
+            min = '0' + min;
+          }
+          if (hr < 10 || hr == 0) {
+            hr = '0' + hr;
+          }
+
+          timer.innerHTML = hr + ':' + min + ':' + sec;
+
+          setTimeout("timerCycle()", 1000);
+        }
+      }
+
+      function resetTimer() {
+        timer.innerHTML = '00:00:00';
+        stoptime = true;
+        hr = 0;
+        sec = 0;
+        min = 0;
+        //input要素の削除
+        $('.totaltime').remove();
+      }
+      function registTimer(){
+        $('#myModal').on('shown.bs.modal', function () {
+          $('#exampleFormEmail').trigger('focus')
+        })
+        timer.innerHTML = '00:00:00';
+        stoptime = true;
+        hr = 0;
+        sec = 0;
+        min = 0;
+      }
+  </script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
