--- a/content/templates/content/AddStudyLog.html
+++ b/content/templates/content/AddStudyLog.html
@@ -7,20 +7,29 @@
     <form action="" method="POST">
       {% csrf_token%}
       <div class="inputs">
-        <label class="label">使用教材</label>
-        <input class="input_form" type="text" name="text">
-      </div>
-      <div class="inputs">
-        <label class="label">学習時間(分)</label>
-        <input class="input_form" required="required" type="number" name="time">
+        <label class="label">日付</label>
+        <input id="today" class="input_form" type="date" name="date">
       </div>
       <div class="inputs">
         <label class="label">分類</label>
         <input class="input_form" type="text" name="category">
+      </div>
+      <div class="inputs">
+        <label class="label">学習時間(分)</label>
+        <input class="input_form" required="required" type="number" name="time">
       </div>
       <div class="btn-area">
         <input type="submit" value="送信">
       </div>
     </form>
   </div>
+
+  <script>
+    var today = new Date();
+    today.setDate(today.getDate());
+    var yyyy = today.getFullYear();
+    var mm = ("0" + (today.getMonth() + 1)).slice(-2);
+    var dd = ("0" + today.getDate()).slice(-2);
+    document.getElementById("today").value = yyyy + '-' + mm + '-' + dd;
+  </script>
 </body>
