change registsite.html registsite

--- a/content/templates/content/CreateNewPassword.html
+++ b/content/templates/content/CreateNewPassword.html
@@ -1,21 +1,21 @@
 <head>
-  <link rel="stylesheet" href="./../static/css/sigin-in.css">
+  <link rel="stylesheet" href="./../../static/css/sigin-in.css">
 </head>
 <body>
   <div class="form-wrapper">
-    <h1>パスワード作製</h1>
+    <h1>パスワード更新</h1>
     <form action="" method="POST">
       {% csrf_token %}
       <div class="form-item">
         <label for="password"></label>
-        <input name="password" required="required" placeholder="新しいパスワード"></input>
+        <input type="email" name = "email" required="required" placeholder="Email(確認用)*">
       </div>
       <div class="form-item">
         <label for="password"></label>
-        <input type="password" name="password" required="required" placeholder="確認"><input>
+        <input type="password" name="password" required="required" placeholder="新しいパスワード*">
       </div>
       <div class="button-panel">
-        <input type="submit" class="button" title="Create new password" value="パスワード更新"></input>
+        <input type="submit" class="button" title="Create new password" value="パスワード更新">
       </div>
     </form>
     <div class="form-footer">
