--- a/content/templates/content/password_reset_done.html
+++ b/content/templates/content/password_reset_done.html
@@ -1,6 +1,4 @@
 <head>
-  <link href="./../../static/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="./../../static/css/bootstrap.css">
   <link rel="stylesheet" href="./../../static/css/base.css">
 </head>
@@ -10,7 +8,11 @@
       font-weight: bold;
     }
     .Password_reset_sent{
+      width: 73%;
       display: block;
+      margin-left:24%;
+      margin-top:25%;
+      transform: translate(0%,-50%);
     }
   </style>
   <!--base.html-->
@@ -21,7 +23,6 @@
     <div class="nav-wrap">
       <nav class="main-nav" role="navigation">
         <ul class="unstyled list-hover-slide">
-          <li><a href="{% url 'studyapp:home' %}">ホーム</a></li>
           <li><a href="{% url 'studyapp:login' %}">ログイン・会員登録</a></li>
         </ul>
       </nav>
@@ -30,8 +31,8 @@
   <!--end base.html-->
 
   <!--Password reset sent-->
-  <div class="Password_reset_sent container p-5">
-    <h2 class="title font-weight-bold mt-3">パスワード変更用のメールを送信しました</h2>
+  <div class="Password_reset_sent">
+    <h2 class="title">パスワード変更用のメールを送信しました</h2>
     <hr>
-    <p>入力したメールアドレスよりアカウントの確認ができましたので，パスワード再設定用のメールを送信しました。<br>メールが届かない場合は、入力したメールアドレスに誤りがないか確認、もしくは，迷惑メールフォルダを確認してください。</p>
+    <p> 入力したメールアドレスよりアカウントの確認ができましたので，パスワード再設定用のメールを送信しました。<br> メールが届かない場合は、入力したメールアドレスに誤りがないか確認、もしくは，迷惑メールフォルダを確認してください。</p>
   </div>
