--- a/content/templates/content/timer.html
+++ b/content/templates/content/timer.html
@@ -5,25 +5,11 @@
   <link rel="stylesheet" href="./../../static/css/base.css">
   <link rel="stylesheet" href="./../../static/css/timer.css">
 </head>
-<body>
 
-<!--base.html-->
-  <header class="header" role="banner">
-    <h1 class="logo">
-      <span>STUDYAPP</span>
-    </h1>
-    <div class="nav-wrap">
-      <nav class="main-nav" role="navigation">
-        <ul class="unstyled list-hover-slide">
-          <li><a href="{% url 'studyapp:home '}">ホーム</a></li>
-          <li><a href="./sign-in.html">ログアウト</a></li>
-          <li><a href="./timer.html">タイマー</a></li>
-          <li><a href="{% url 'studyapp:registsite' %}">登録サイト</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <!--end base.html-->
+{% extends 'content/base.html' %}
+
+<body>
+{% block content %}
   <div class="timer_location">
     <div class="timer_design">
       <div id="stopwatch">
@@ -73,6 +59,15 @@
     </div>
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"
+    integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script>
     const timer = document.getElementById('stopwatch');
       var hr = 0;
@@ -84,7 +79,25 @@
         if (stoptime == true) {
           stoptime = false;
           timerCycle();
+          $.cookie("hr",hr)
+          $.cookie("min",min)
+          $.cookie("sec",sec)
         }
+      }
+      var cookie_hr = $.cookie("hr")
+      var cookie_min = $.cookie("min")
+      var cookie_sec = $.cookie("sec")
+      console.log(cookie_hr)
+      console.log(cookie_min)
+      console.log(cookie_sec)
+      if(cookie_hr){
+        hr = cookie_hr
+      }
+      if(cookie_min){
+        min = cookie_min
+      }
+      if(cookie_sec){
+        sec = cookie_sec
       }
       function stopTimer() {
         if (stoptime == false) {
@@ -134,7 +147,7 @@
         min = 0;
       }
       function registTimer(){
-        document.getElementById('time').value = 60 * hr +  min + sec
+        document.getElementById('time').value = parseInt(60 * hr + min )
         $('#myModal').on('shown.bs.modal', function () {
           $('#today').trigger('focus')
           var today = new Date();
@@ -151,10 +164,5 @@
         min = 0;
       }
   </script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  {% endblock %}
 </body>
